--- a/examples/01_downloadmodels.ipynb
+++ b/examples/01_downloadmodels.ipynb
@@ -15,7 +15,11 @@
     "\n",
     "[https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/](https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/)\n",
     "\n",
-    "### select a model\n"
+    "### select a model\n",
+    "<img alt=\"https://github.com/yuanzhoulvpi2017/quick_sentence_transformers/blob/main/images/selectmodel01.png\" src=\"images/selectmodel01.png\" title=\"models\"/>\n",
+    "\n",
+    "### save model to dir\n",
+    "\n"
    ]
   },
   {
