--- a/examples/01_downloadmodels.ipynb
+++ b/examples/01_downloadmodels.ipynb
@@ -16,7 +16,7 @@
     "[https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/](https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/)\n",
     "\n",
     "### select a model\n",
-    "<img alt=\"https://github.com/yuanzhoulvpi2017/quick_sentence_transformers/blob/main/images/selectmodel01.png\" src=\"images/selectmodel01.png\" title=\"models\"/>\n",
+    "<img alt=\"paraphrase-multilingual-MiniLM-L12-v2.png\" src=\"images/selectmodel01.png\" title=\"models\"/>\n",
     "\n",
     "### save model to dir\n",
     "\n"
