--- a/examples/02_sbert_structure.ipynb
+++ b/examples/02_sbert_structure.ipynb
@@ -111,6 +111,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## model structure\n",
+    "`paraphrase-multilingual-MiniLM-L12-v2` consists of two parts.\n",
+    "1. `Transformer`\n",
+    "2. `Pooling`\n",
+    "\n",
+    "get more detail information. you can explode model dir"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
