--- a/examples/01_downloadmodels.ipynb
+++ b/examples/01_downloadmodels.ipynb
@@ -16,6 +16,8 @@
     "[https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/](https://public.ukp.informatik.tu-darmstadt.de/reimers/sentence-transformers/v0.2/)\n",
     "\n",
     "### select a model\n",
+    "select the demo model: `paraphrase-multilingual-MiniLM-L12-v2`\n",
+    "\n",
     "<img alt=\"paraphrase-multilingual-MiniLM-L12-v2.png\" src=\"images/selectmodel01.png\" title=\"models\"/>\n",
     "\n",
     "### save model to dir\n",
