--- a/examples/03_sbert2onnx_user.ipynb
+++ b/examples/03_sbert2onnx_user.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -161,7 +161,7 @@
        "{'input_ids': tensor([[    0, 73014,  1322,     2]]), 'token_type_ids': tensor([[0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1]])}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -274,14 +274,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:16<00:00, 61.52it/s]"
+      "100%|██████████| 1000/1000 [00:16<00:00, 62.01it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch cpu Inference time = 16.09 ms\n"
+      "PyTorch cpu Inference time = 15.95 ms\n"
      ]
     },
     {
@@ -340,15 +340,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 11:21:16.715169653 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
-      "100%|██████████| 2000/2000 [00:14<00:00, 137.57it/s]"
+      "2022-02-24 11:31:28.360611072 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "100%|██████████| 2000/2000 [00:13<00:00, 153.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OnnxRuntime cpu Inference time = 7.13 ms\n"
+      "OnnxRuntime cpu Inference time = 6.38 ms\n"
      ]
     },
     {
@@ -427,14 +427,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "source": [
+    "# 6. GPU to Inference ONNX Model with ONNX Runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CPUExecutionProvider']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import psutil\n",
+    "import onnxruntime\n",
+    "import numpy\n",
+    "\n",
+    "onnxruntime.get_available_providers()\n",
+    "\n",
+    "# assert 'CUDAExecutionProvider' in onnxruntime.get_available_providers()\n",
+    "# device_name = 'gpu'\n",
+    "\n",
+    "# sess_options = onnxruntime.SessionOptions()\n",
+    "\n",
+    "# # Optional: store the optimized graph and view it using Netron to verify that model is fully optimized.\n",
+    "# # Note that this will increase session creation time so enable it for debugging only.\n",
+    "# sess_options.optimized_model_filepath = os.path.join(output_dir, \"optimized_model_{}.onnx\".format(device_name))\n",
+    "\n",
+    "# # Please change the value according to best setting in Performance Test Tool result.\n",
+    "# sess_options.intra_op_num_threads=psutil.cpu_count(logical=True)\n",
+    "\n",
+    "# session = onnxruntime.InferenceSession(export_model_path, sess_options)\n",
+    "\n",
+    "# latency = []\n",
+    "# for i in range(total_samples):\n",
+    "#     ort_inputs = {k:v.cpu().numpy() for k, v in inputs.items()}\n",
+    "#     start = time.time()\n",
+    "#     ort_outputs = session.run(None, ort_inputs)\n",
+    "#     latency.append(time.time() - start)\n",
+    "    \n",
+    "# print(\"OnnxRuntime {} Inference time = {} ms\".format(device_name, format(sum(latency) * 1000 / len(latency), '.2f')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
