--- a/examples/03_sbert2onnx_gpu.ipynb
+++ b/examples/03_sbert2onnx_gpu.ipynb
@@ -274,14 +274,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:16<00:00, 62.01it/s]"
+      "100%|██████████| 1000/1000 [00:15<00:00, 65.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch cpu Inference time = 15.95 ms\n"
+      "PyTorch cpu Inference time = 15.11 ms\n"
      ]
     },
     {
@@ -340,15 +340,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 11:31:28.360611072 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
-      "100%|██████████| 2000/2000 [00:13<00:00, 153.75it/s]"
+      "2022-02-24 13:53:46.317869989 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "100%|██████████| 2000/2000 [00:12<00:00, 158.30it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OnnxRuntime cpu Inference time = 6.38 ms\n"
+      "OnnxRuntime cpu Inference time = 6.19 ms\n"
      ]
     },
     {
@@ -440,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CPUExecutionProvider']"
+       "['TensorrtExecutionProvider', 'CUDAExecutionProvider', 'CPUExecutionProvider']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,30 +459,163 @@
     "import onnxruntime\n",
     "import numpy\n",
     "\n",
-    "onnxruntime.get_available_providers()\n",
+    "onnxruntime.get_available_providers()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## for CUDAExecutionProvider version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 13:54:07.026746027 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "100%|██████████| 20000/20000 [00:56<00:00, 352.07it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnnxRuntime gpu Inference time = 2.79 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psutil\n",
+    "import onnxruntime\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "st = ['您好']\n",
+    "inputs = tokenizer(\n",
+    "    st,\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=512,\n",
+    "    return_tensors=\"pt\"\n",
+    ")\n",
     "\n",
     "# assert 'CUDAExecutionProvider' in onnxruntime.get_available_providers()\n",
-    "# device_name = 'gpu'\n",
+    "device_name = 'gpu'\n",
     "\n",
-    "# sess_options = onnxruntime.SessionOptions()\n",
+    "sess_options = onnxruntime.SessionOptions()\n",
     "\n",
-    "# # Optional: store the optimized graph and view it using Netron to verify that model is fully optimized.\n",
-    "# # Note that this will increase session creation time so enable it for debugging only.\n",
-    "# sess_options.optimized_model_filepath = os.path.join(output_dir, \"optimized_model_{}.onnx\".format(device_name))\n",
+    "# Optional: store the optimized graph and view it using Netron to verify that model is fully optimized.\n",
+    "# Note that this will increase session creation time so enable it for debugging only.\n",
+    "sess_options.optimized_model_filepath = os.path.join(output_dir, \"optimized_model_{}.onnx\".format(device_name))\n",
     "\n",
-    "# # Please change the value according to best setting in Performance Test Tool result.\n",
-    "# sess_options.intra_op_num_threads=psutil.cpu_count(logical=True)\n",
+    "\n",
+    "# Please change the value according to best setting in Performance Test Tool result.\n",
+    "sess_options.intra_op_num_threads=psutil.cpu_count(logical=True)\n",
     "\n",
     "# session = onnxruntime.InferenceSession(export_model_path, sess_options)\n",
+    "session = onnxruntime.InferenceSession(export_model_path, sess_options, providers=['CUDAExecutionProvider'])\n",
     "\n",
-    "# latency = []\n",
-    "# for i in range(total_samples):\n",
-    "#     ort_inputs = {k:v.cpu().numpy() for k, v in inputs.items()}\n",
-    "#     start = time.time()\n",
-    "#     ort_outputs = session.run(None, ort_inputs)\n",
-    "#     latency.append(time.time() - start)\n",
+    "\n",
+    "latency = []\n",
+    "for i in tqdm(range(total_samples*20)):\n",
+    "    ort_inputs = {k:v.cpu().numpy() for k, v in inputs.items()}\n",
+    "    start = time.time()\n",
+    "    ort_outputs = session.run(None, ort_inputs)\n",
+    "    latency.append(time.time() - start)\n",
     "    \n",
-    "# print(\"OnnxRuntime {} Inference time = {} ms\".format(device_name, format(sum(latency) * 1000 / len(latency), '.2f')))\n"
+    "print(\"OnnxRuntime {} Inference time = {} ms\".format(device_name, format(sum(latency) * 1000 / len(latency), '.2f')))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## for TensorrtExecutionProvider version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 13:55:51.823805741 [W:onnxruntime:Default, onnxruntime_pybind_state.cc:509 CreateExecutionProviderInstance] Failed to create TensorrtExecutionProvider. Please reference https://onnxruntime.ai/docs/execution-providers/TensorRT-ExecutionProvider.html#requirements to ensure all dependencies are met.\n",
+      "2022-02-24 13:55:52.308750845 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "100%|██████████| 1000/1000 [00:07<00:00, 137.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnnxRuntime gpu_trt Inference time = 7.10 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import psutil\n",
+    "import onnxruntime\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "st = ['您好']\n",
+    "inputs = tokenizer(\n",
+    "    st,\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=512,\n",
+    "    return_tensors=\"pt\"\n",
+    ")\n",
+    "\n",
+    "# assert 'CUDAExecutionProvider' in onnxruntime.get_available_providers()\n",
+    "device_name = 'gpu_trt'\n",
+    "\n",
+    "sess_options = onnxruntime.SessionOptions()\n",
+    "\n",
+    "# Optional: store the optimized graph and view it using Netron to verify that model is fully optimized.\n",
+    "# Note that this will increase session creation time so enable it for debugging only.\n",
+    "sess_options.optimized_model_filepath = os.path.join(output_dir, \"optimized_model_{}.onnx\".format(device_name))\n",
+    "\n",
+    "\n",
+    "# Please change the value according to best setting in Performance Test Tool result.\n",
+    "sess_options.intra_op_num_threads=psutil.cpu_count(logical=True)\n",
+    "\n",
+    "# session = onnxruntime.InferenceSession(export_model_path, sess_options)\n",
+    "session = onnxruntime.InferenceSession(export_model_path, sess_options, providers=['TensorrtExecutionProvider'])\n",
+    "\n",
+    "\n",
+    "latency = []\n",
+    "for i in tqdm(range(total_samples)):\n",
+    "    ort_inputs = {k:v.cpu().numpy() for k, v in inputs.items()}\n",
+    "    start = time.time()\n",
+    "    ort_outputs = session.run(None, ort_inputs)\n",
+    "    latency.append(time.time() - start)\n",
+    "    \n",
+    "print(\"OnnxRuntime {} Inference time = {} ms\".format(device_name, format(sum(latency) * 1000 / len(latency), '.2f')))\n"
    ]
   },
   {
