--- a/examples/03_sbert2onnx_cpu.ipynb
+++ b/examples/03_sbert2onnx_cpu.ipynb
@@ -15,14 +15,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start Jupyter in the environment 'Python 3.9.7 ('mynet') (~/anaconda3/envs/mynet/bin/python)'. \n",
+      "FileNotFoundError: [Errno 2] No such file or directory \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
