--- a/examples/04_sbert2onnx_gpu.ipynb
+++ b/examples/04_sbert2onnx_gpu.ipynb
@@ -321,6 +321,8 @@
    },
    "source": [
     "# 4. Inference ONNX Model with ONNX Runtime\n",
+    "\n",
+    "## cpu\n",
     "For Onnx Runtime 1.6.0 or older, OpenMP environment variables are very important for CPU inference of Bert model. Since 1.7.0, the official package is not built with OpenMP.\n",
     "\n",
     "Now we inference the model with ONNX Runtime. Here we can see that OnnxRuntime has better performance than PyTorch."
@@ -398,12 +400,12 @@
     "collapsed": false
    },
    "source": [
-    "# 5. Verifying"
+    "## Verifying"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -435,12 +437,12 @@
     }
    },
    "source": [
-    "# 6. GPU to Inference ONNX Model with ONNX Runtime"
+    "## GPU to Inference ONNX Model with ONNX Runtime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +451,7 @@
        "['TensorrtExecutionProvider', 'CUDAExecutionProvider', 'CPUExecutionProvider']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,22 +473,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 14:28:22.269745543 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
-      "100%|██████████| 20000/20000 [01:04<00:00, 310.79it/s]"
+      "2022-02-24 14:32:33.974634512 [W:onnxruntime:, inference_session.cc:1407 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "100%|██████████| 1000/1000 [00:02<00:00, 334.63it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OnnxRuntime gpu Inference time = 3.16 ms\n"
+      "OnnxRuntime gpu Inference time = 2.94 ms\n"
      ]
     },
     {
@@ -530,13 +532,40 @@
     "\n",
     "\n",
     "latency = []\n",
-    "for i in tqdm(range(total_samples*20)):\n",
+    "for i in tqdm(range(total_samples)):\n",
     "    ort_inputs = {k:v.cpu().numpy() for k, v in inputs.items()}\n",
     "    start = time.time()\n",
-    "    ort_outputs = session.run(None, ort_inputs)\n",
+    "    ort_outputs_gpu = session.run(None, ort_inputs)\n",
     "    latency.append(time.time() - start)\n",
     "    \n",
     "print(\"OnnxRuntime {} Inference time = {} ms\".format(device_name, format(sum(latency) * 1000 / len(latency), '.2f')))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verifying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***** Verifying correctness *****\n",
+      "PyTorch and ONNX Runtime output 0 are close: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"***** Verifying correctness *****\")\n",
+    "for i in range(1):\n",
+    "    print('PyTorch and ONNX Runtime output {} are close:'.format(i), numpy.allclose(ort_outputs_gpu[i], outputs[i].cpu(), rtol=1e-05, atol=1e-05))"
    ]
   },
   {
