--- a/examples/05_onnx2tensorrt.ipynb
+++ b/examples/05_onnx2tensorrt.ipynb
@@ -55,6 +55,36 @@
     "with open(engine_file_path, \"wb\") as f:\n",
     "    f.write(engine.serialize())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import tensorrt as trt\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "trt_logger = trt.Logger(trt.Logger.INFO)\n",
+    "runtime = trt.Runtime(trt_logger)\n",
+    "with open(engine_file_path, \"rb\") as f:\n",
+    "    engine = runtime.deserialize_cuda_engine(f.read())\n",
+    "print(\"Engine Info:\")\n",
+    "for i, binding in enumerate(engine):\n",
+    "    shape = [engine.max_batch_size, *engine.get_binding_shape(binding)]\n",
+    "    dtype = trt.nptype(engine.get_binding_dtype(binding))\n",
+    "    volume = abs(trt.volume(engine.get_binding_shape(binding)))\n",
+    "    if engine.binding_is_input(binding):\n",
+    "        desc = \"input\"\n",
+    "    else:\n",
+    "        desc = \"output\"\n",
+    "    print(f\"{i} type:    {desc}\\n  binding: {binding} \\n  data:    {np.dtype(dtype).name}\\n  shape:   {shape} => {volume} \\n\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
