--- a/examples/05_onnx2tensorrt.ipynb
+++ b/examples/05_onnx2tensorrt.ipynb
@@ -177,10 +177,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02/25/2022-07:46:46] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.6.1\n",
+      "[02/25/2022-07:46:46] [TRT] [I] [MemUsageChange] Init cuBLAS/cuBLASLt: CPU +0, GPU +10, now: CPU 1574, GPU 1917 (MiB)\n",
+      "[02/25/2022-07:46:46] [TRT] [I] [MemUsageChange] Init cuDNN: CPU +0, GPU +8, now: CPU 1574, GPU 1925 (MiB)\n",
+      "[02/25/2022-07:46:47] [TRT] [I] [MemUsageChange] TensorRT-managed allocation in IExecutionContext creation: CPU +0, GPU +361, now: CPU 0, GPU 809 (MiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "context = engine.create_execution_context()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_idx = engine[input_name]\n",
+    "output_idx = engine[output_name]\n",
+    "\n",
+    "\n",
+    "buffers = [None] * 2 # Assuming 1 input and 1 output\n",
+    "buffers[input_idx] = input_ptr\n",
+    "buffers[output_idx] = output_ptr\n",
+    "\n",
+    "\n",
+    "context.execute_async_v2(buffers, stream_ptr)"
+   ]
   }
  ],
  "metadata": {
